[tool.poetry]
name = "handout-10"
version = "0.1.0"
description = ""
authors = ["Sid <sidmontu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.2"
loguru = "^0.7.0"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"

[tool.poetry.scripts]
expr = "bin.run:_main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
'''

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

[tool.isort]
profile = "black"
